fix(bff): restore default members and family creation
